<resources>
    <string name="app_name">HakatonProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_prompt">Find your G-Team</string>
    <string name="hint_enter_team_name">Enter team name here</string>
    <string name="create_team_prompt">Don\'t have a team? Create one now!</string>
    <string name="create_acc_prompt">Create account</string>
    <string name="login_team_fragment_button_text">GO!</string>
    <string name="permission_request_title">Permission required</string>
    <string name="permission_request_message_camera">Please give permission to access your camera</string>
    <string name="error_server">Server error</string>
    <string name="error_data_processing">Error during data processing</string>
    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_pass">Password</string>
    <string name="login_enter_fragment_button_text">Sign in</string>
    <string name="create_team_title">Create team</string>
    <string name="create_team_fragment_button_text">Continue</string>
    <string name="hint_enter_team_descr">Team description</string>
    <string name="hint_team_name">Team name</string>
    <string name="hint_team_target">Team target</string>
    <string name="set_photo_team_title">Set team photo</string>
    <string name="set_photo_user_title">Set user photo</string>
    <string name="prompt_set_team_photo">Set team photo</string>
    <string name="prompt_set_user_photo">Set user profile image</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_enter_user_pass">User password</string>
    <string name="hint_team_email">User email</string>
    <string name="create_user_fragment_button_text">Continue</string>
    <string name="create_user_title">Create user</string>
    <string name="set">set</string>
    <string name="skip">skip</string>
    <string name="no_connection">Check your internet connection</string>
    <string name="error_create_team">Error creating team</string>
    <string name="success_create_team">Team created successfully</string>
    <string name="error_check_team">Can\'t find team with this name</string>
    <string name="error_login">Wrong credentials</string>
    <string name="error_fill_data">Please fill all required data</string>
    <string name="error_sign_up">Something went wrong</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer closed</string>
    <string name="create_project">Create project</string>
    <string name="projects">Projects: </string>
    <string name="members">Members:</string>
    <string name="error_fetching_members">Error fetching members</string>
    <string name="error_fetching_projects">Error fetching projects</string>
    <string name="create_proj_title">Create new project</string>
    <string name="hint_project_name">Project name</string>
    <string name="hint_proj_descr">Project description</string>
    <string name="set_date_btn">Set date</string>
    <string name="create">Create</string>
    <string name="error_create_proj">Error creating project</string>
    <string name="success_create_proj">Successfully created project</string>
    <string name="no_project_placeholder">Nothing to view. You can select project in the drawer (if you have one).</string>
    <string name="assign_member_to_task">Assign member to task</string>
</resources>
