<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.ekalips.hakatonproject.stuff.Utils"/>
        <variable
            name="data"
            type="com.ekalips.hakatonproject.networking.request_bodies.CreateNewProjRequestBody"/>
    </data>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.ekalips.hakatonproject.main.NewProjectActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/create_proj_title" />
        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={data.title}"
                        android:hint="@string/hint_project_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={data.descr}"
                        android:hint="@string/hint_proj_descr" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="@{data.time!=0}"
                        android:text="@{Utils.parseMillsToDateAndHoursAndMins(data.time,false,true),default = 1444}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <Button
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/setDateBtn"
                        android:text="@string/set_date_btn" />
                </LinearLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/createBtn"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"/>
            </LinearLayout>


        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>