<layout>

    <data>
        <variable
            name="data"
            type="com.ekalips.hakatonproject.networking.request_bodies.EnterTeamRequestBody"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.ekalips.hakatonproject.auth.LoginTeamFragment">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp">
                <requestFocus/>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={data.team}"
                    android:hint="@string/hint_enter_team_name" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createTeamBtn"
                android:clickable="true"
                android:text="@string/create_team_prompt"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </LinearLayout>
</layout>