<layout>

    <data>
        <variable
            name="data"
            type="com.ekalips.hakatonproject.networking.request_bodies.CreateUserBody"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.ekalips.hakatonproject.auth.LoginEnterFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp">
                <requestFocus/>
            </View>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={data.name}"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_user_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={data.pass}"
                    android:maxLines="1"
                    android:hint="@string/hint_enter_user_pass" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={data.email}"
                    android:maxLines="1"
                    android:hint="@string/hint_team_email" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</layout>